# theforge

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
agents/: analyst.yaml  chat-only.yaml  research-assistant.yaml
alembic/: env.py
alembic/versions/: 0001_audit_log.py  0002_audit_pii_redactions.py  0003_api_keys.py  0004_audit_event.py  0005_ingestion_jobs.py  0006_audit_agent_tool.py  0007_agent_runs.py
docs/: ARCHITECTURE.md  POSITIONING.md  ROADMAP.md  TESTING.md
docs/adr/: 0001-model-alias-indirection.md  0002-litellm-as-provider-adapter.md  0003-master-key-auth-first.md  0004-openai-compatible-surface.md  0005-compliance-first-design.md  0006-buffered-audit-log.md  0007-pii-scrubbing-outbound.md  0008-api-key-management.md  0009-token-aware-rate-limiting.md  0010-provider-fallback-chains.md  0011-streaming-sse.md  0012-pii-safe-rag-foundation.md  0013-rag-injection.md  0014-rag-eval-pipeline.md  0015-chunking-strategies.md  0016-hybrid-search.md  0017-async-ingestion-jobs.md  0018-prompt-injection-defense.md  0019-agent-runtime.md  0020-tool-library-design.md  0021-mcp-server.md  0022-agent-run-persistence.md
evals/: baseline.json  compare_chunking.py  compare_search.py  harness.py  redteam_injection.py  run_rag_eval.py
evals/datasets/: healthcare.jsonl  keyword.jsonl  legal.jsonl  longform.jsonl
evals/injection/: corpus.jsonl
k8s/: README.md  configmap.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  secret.example.yaml  service.yaml  worker-deployment.yaml
src/forge/: audit.py  auth.py  config.py  db.py  jobs.py  keys.py  main.py  mcp.py  pii.py  ratelimit.py  worker.py
src/forge/agents/: runs.py  runtime.py  spec.py  tools.py
src/forge/api/: agents.py  audit.py  chat.py  costs.py  health.py  keys.py  mcp.py  rag.py
src/forge/gateway/: router.py
src/forge/rag/: chunking.py  embeddings.py  ingest.py  inject.py  parsing.py  sparse.py  store.py
tests/: conftest.py  test_agent_runs.py  test_agents.py  test_audit.py  test_auth.py  test_chunking.py  test_costs.py  test_evals.py  test_fallbacks.py  test_gateway.py  test_health.py  test_hybrid.py  test_injection.py  test_jobs.py  test_keys.py  test_mcp.py  test_parsing.py  test_pii.py  test_rag.py  test_rag_chat.py  test_ratelimit.py  test_streaming.py  test_tools.py
