[project]
name = "forge"
version = "0.1.0"
description = "Self-hostable AI infrastructure layer for regulated industries"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "litellm>=1.55",
    "openai>=1.55",
    "pydantic-settings>=2.6",
    "redis>=5.2",
    "sqlalchemy>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
    # Small English NER model for Presidio's spaCy engine — ADR-0007 trades some
    # recall for a footprint that works in CI and self-hosted deploys.
    "en-core-web-sm",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/forge"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection idiom uses calls in argument defaults
extend-immutable-calls = ["fastapi.Depends", "fastapi.security.HTTPBearer"]
