[project]
name = "forge"
version = "0.1.0"
description = "Self-hostable AI infrastructure layer for regulated industries"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "litellm>=1.55",
    "openai>=1.55",
    "pydantic-settings>=2.6",
    "redis>=5.2",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
    "qdrant-client>=1.12",
    # BM25 sparse embeddings for hybrid search (ADR-0016)
    "fastembed>=0.4",
    # async ingestion job queue (ADR-0017)
    "arq>=0.26",
    "pymupdf>=1.25",
    "python-docx>=1.1",
    "beautifulsoup4>=4.12",
    "python-multipart>=0.0.18",
    # NER models for Presidio's spaCy engine. Default is lg: the eval harness
    # measured a name-recall leak with sm (ADR-0014), and for regulated content
    # recall beats footprint. sm ships too as the lightweight opt-down
    # (FORGE_PII_SPACY_MODEL=en_core_web_sm).
    "en-core-web-lg",
    "en-core-web-sm",
]

[tool.uv.sources]
en-core-web-lg = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0-py3-none-any.whl" }
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.8",
]
# Layer-2 eval stack (TESTING.md) — heavy, only needed to run evals/.
# ragas 0.4.x imports from the pre-1.0 langchain layout; pin the stack <1.
evals = [
    "ragas>=0.2",
    "langchain-ollama>=0.2,<1",
    "langchain-community>=0.3,<0.4",
    "langchain<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/forge"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]  # lets tests import the evals/ harness

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection idiom uses calls in argument defaults
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.security.HTTPBearer",
    "fastapi.File",
    "fastapi.Form",
    "fastapi.Query",
]
